--- a/.i3status.conf
+++ b/.i3status.conf
@@ -11,7 +11,7 @@ general {
         interval = 5
 }
 
-order += "cpu_temperature 0"
+# order += "cpu_temperature 0"
 # order += "disk /"
 order += "disk /home"
 # order += "run_watch DHCP"
@@ -37,7 +37,8 @@ volume master {
 
 wireless wlp2s0 {
         # %ip
-        format_up = "W:%quality @%essid"
+        # format_up = "W:%quality@%essid"
+	format_up = "W:%essid"
         format_down = "W:down"
 }
 
@@ -47,7 +48,8 @@ ethernet eth0 {
 }
 
 battery 1 {
-	format = "%status:%percentage %remaining"
+	# format = "%status:%percentage %remaining"
+	format = "%status:%percentage"
 	path = "/sys/class/power_supply/BAT%d/uevent"
 	low_threshold = 20
 }
