--- a/.config/compton/compton.conf
+++ b/.config/compton/compton.conf
@@ -1,4 +1,14 @@
-shadow = false;
+shadow = true;
+shadow-blue = 1.0;
+shadow-radius = 7;
+shadow-offset-x = -7;
+shadow-offset-y = -7;
+shadow-ignore-shaped = true;
+no-dock-shadow = true;
+no-dnd-shadow = true;
+clear-shadow = true;
+backend="glx";
+fading = true;
 inactive-dim = 0.3;
 inactive-dim-fixed = true;
 mark-wmwin-focused = true;
