--- a/.makepkg.conf
+++ b/.makepkg.conf
@@ -1,9 +1,9 @@
 MAKEFLAGS="-j5 -l4"
 PKGDEST=${AURHOME}/cache
 PACKAGER="Thiago Perrotta <thiagoperrotta95@gmail.com>"
-CFLAGS="-march=native -O2 -pipe -fstack-protector --param=ssp-buffer-size=4"
+CFLAGS="-march=native -mtune=generic -O2 -pipe -fstack-protector --param=ssp-buffer-size=4"
 CXXFLAGS="${CFLAGS}"
 GPGKEY="A905373C"
 BUILDENV=(fakeroot !distcc color ccache check sign)
 SIGNPKG=y
-# PKGEXT='.pkg.tar'
+PKGEXT='.pkg.tar'
