--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -22,7 +22,7 @@
     <family>monospace</family>
     <prefer>
       <!-- <family>DejaVu Sans Mono</family> -->
-      <family>Inconsolata</family>
+      <family>Terminus</family>
     </prefer>
   </alias>
 
