--- a/.i3blocks.conf
+++ b/.i3blocks.conf
@@ -9,6 +9,11 @@ command=/usr/libexec/i3blocks/memory
 interval=30
 
 [disk-home]
+command=/usr/libexec/i3blocks/disk /
+interval=30
+separator=false
+
+[disk-home]
 command=/usr/libexec/i3blocks/disk $HOME
 interval=30
 
