--- a/.makepkg.conf
+++ b/.makepkg.conf
@@ -6,4 +6,4 @@ CXXFLAGS="${CFLAGS}"
 GPGKEY="A905373C"
 BUILDENV=(fakeroot !distcc color ccache check sign)
 SIGNPKG=y
-PKGEXT='.pkg.tar'
+# PKGEXT='.pkg.tar'
