--- a/.i3blocks.conf
+++ b/.i3blocks.conf
@@ -4,9 +4,9 @@ separator_block_width=12
 command=/usr/libexec/i3blocks/volume
 signal=10
 
-[memory]
-command=/usr/libexec/i3blocks/memory
-interval=30
+# [memory]
+# command=/usr/libexec/i3blocks/memory
+# interval=30
 
 [disk-home]
 command=/usr/libexec/i3blocks/disk /
