--- a/.irssi/config
+++ b/.irssi/config
@@ -113,6 +113,7 @@ chatnets = {
 
 channels = (
   { name = "#irssi"; chatnet = "ircnet"; autojoin = "No"; },
+  { name = "silc"; chatnet = "silc"; autojoin = "No"; },
   { name = "#archlinux"; chatnet = "fn"; autojoin = "yes"; },
   { name = "#archlinux-offtopic"; chatnet = "fn"; autojoin = "yes"; },
   { name = "#ubuntu"; chatnet = "fn"; autojoin = "yes"; },
@@ -288,8 +289,9 @@ settings = {
     recode_autodetect_utf8 = "yes";
     recode_fallback = "CP1252";
   };
-  "fe-text" = { actlist_sort = "refnum"; };
-  "fe-common/core" = { autolog = "yes"; };
+  "fe-text" = { actlist_sort = "refnum"; term_force_colors = "yes"; };
+  "fe-common/core" = { autolog = "yes"; print_active_channel = "yes"; };
+  "irc/core" = { alternate_nick = "_thiagowfx"; skip_motd = "yes"; };
 };
 ignores = ( { level = "JOINS PARTS QUITS"; } );
 logs = { };
